# sud

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: publish.yml  test.yml
sud/: __init__.py  __main__.py  cli.py  click.py  config.py  constants.py  exceptions.py  prompt.py  updater.py
tests/: conftest.py  test_cli.py  test_config.py  test_prompt.py  test_updater.py
